# 0install

./: .dockerignore  .gitignore  .travis-build.sh  .travis-extra-deps.sh  .travis-install.sh  .travis-test-compile.sh  .travis.yml  0alias  0alias.1  0compile.properties  0desktop  0desktop.1  0install  0install-gtk.opam  0install-python-fallback  0install-python.xml  0install-python.xml.template  0install-solver.opam  0install.1  0install.opam  0launch  0launch-auto  0launch-gui  0launch.1  0store  0store-secure-add  0store-secure-add.1  0store.1  CHANGES.md  GitVersion.yml  MANIFEST.in  Makefile  Makefile.build  README  README.md  ROX-Lib.xml  ZeroInstall.xml  appveyor.yml  binary-feed.xml.in  checking.py  (+42 more)
0install/: index.html
0install-gtk/: index.html
0install-solver/: index.html
Tests/: ROX-Lib.xml  edit.xml
applications/: zeroinstall-add.desktop  zeroinstall-manage.desktop  zeroinstall-zero2desktop.desktop  zeroinstall.directory  zeroinstall.menu
debian/: changelog  control  copyright  files  rules
injector/: basedir.py  injector-auto  policy.py  reader.py  run.py  (+2 more)
injector-gui/: iface_browser.py  injector-gui  properties.py
ocaml/gui_gtk/: _tags  add_box.ml  alert_box.ml  app_list_box.ml  bug_report_box.ml  cache_explorer_box.ml  component_box.ml  component_tree.ml  dune  gtk_common.ml  gtk_utils.ml  gui_gtk_plugin.ml  gui_gtk_plugin.mli  gui_progress.ml  help_box.ml  icon_cache.ml  limiter.ml  main.ml  preferences_box.ml  preferences_box.mli  solver_box.ml  tray_icon.ml  trust_box.ml
ocaml/support/: _tags  argparse.ml  argparse.mli  base64.ml  basedir.ml  basedir.mli  common.ml  dune  env.ml  gpg.ml  gpg.mli  hash.cppo.ml  hash.ml  hash.mli  json.ml  locale.ml  locale.mli  logging.ml  logging.mli  lwt_preemptive_copy.ml  qdom.ml  qdom.mli  safe_exn.ml  safe_exn.mli  sat.ml  sat.mli  system.ml  system.mli  urlparse.ml  urlparse.mli  utils.c  utils.ml  utils.mli  windows.c  windows.ml  windows_api.cppo.ml  windows_api.disabled.ml  windows_api.enabled.ml  windows_api.ml  windows_api.mli  (+2 more)
ocaml/tests/: _tags  dbus.conf  driven.xml  dune  fake_distro.ml  fake_gpg_agent.ml  fake_gpg_agent.mli  fake_system.ml  foo-new.xml  pk_service.ml  prog.xml  ranking.xml  server.ml  server.mli  solves.xml  test.ml  test_0install.ml  test_0store.ml  test_apps.ml  test_archive.ml  test_bug_reporter.mli  test_completion.ml  test_distro.ml  test_download.ml  test_driver.ml  test_feed.ml  test_feed_cache.ml  test_fetch.ml  test_gpg.ml  test_gui.ml  test_manifest.ml  test_packagekit.ml  test_qdom.ml  test_run.ml  test_sat.ml  test_selections.ml  test_selections.xml  test_selections_win.xml  test_solver.ml  test_stores.ml  (+4 more)
ocaml/tests/data/: Build.xml  Compiler-new.xml  HelloWorld.tgz  HelloWorldMain  Langs.xml  Native.xml  RecipeRemoveDir.xml  Versions.xml  solves.xml  test_selections.xml
ocaml/tests/data/arch/local/zeroinstall-injector-1.5-1/: desc
ocaml/tests/data/dpkg/: status
ocaml/tests/data/gentoo/app-emulation/emul-linux-x86-baselibs-20100220/: PF
ocaml/tests/data/gentoo/sys-kernel/gentoo-sources-2.6.30-r4/: CHOST
ocaml/tests/data/runnable/: Runnable.xml
ocaml/zeroinstall/: _tags  about.ml  apps.ml  apps.mli  arch.ml  arch.mli  archive.ml  archive.mli  binding.ml  command.ml  command.mli  compiled.ml  config.ml  console.ml  constants.ml  curl_threading.ml  dbus.cppo.ml  dbus.ml  dbus.with.ml  dbus.without.ml  default_ui.ml  default_ui.mli  diagnostics.ml  diagnostics.mli  distro.ml  distro.mli  distro_cache.ml  distro_cache.mli  distro_impls.ml  distro_impls.mli  downloader.ml  downloader.mli  driver.ml  driver.mli  dry_run.ml  dune  element.ml  element.mli  env.ml  env.mli  (+78 more)
src/: 0launch.1  Makefile  dune  runenv.ml
src/cli/: add_feed.ml  cli.ml  command_tree.ml  common_options.ml  completion.ml  destroy.ml  generic_select.ml  list_feeds.ml  list_ifaces.ml  main.ml  main.mli  optimise.ml  req_options.ml  run.ml  secureadd.ml  slave.ml  store.ml
src/gui_gtk/: app_list_box.ml  bug_report_box.ml  cache_explorer_box.ml  component_box.ml  component_tree.ml  dune  gtk_common.ml  gui_gtk.ml  gui_gtk_plugin.ml  gui_progress.ml  help_box.ml  icon_cache.ml  preferences_box.ml  solver_box.ml  tray_icon.ml  trust_box.ml  trust_box.mli  unsorted_list.ml  unsorted_list.mli
src/solver/: diagnostics.ml  dune  s.ml  sat.ml  solver_core.ml  zeroinstall_solver.mli
src/solver/tests/: dune  test.ml
src/support/: argparse.ml  argparse.mli  base64.mli  basedir.ml  dune  env.ml  env.mli  gpg.ml  hash.ml  locale.ml  locale.mli  logging.ml  qdom.mli  safe_exn.mli  stream.ml  stream.mli  system.ml  system.mli  urlparse.mli  utils.ml  utils.mli  windows_api.disabled.ml  windows_api.enabled.ml
src/test_gtk/: dune  test.ml
src/tests/: dune  fake_distro.ml  fake_system.ml  pk_service.ml  server.ml  test.ml  test_0install.ml  test_0store.ml  test_apps.ml  test_archive.ml  test_bug_reporter.ml  test_completion.ml  test_distro.ml  test_download.ml  test_feed.ml  test_gpg.ml  test_gui.ml  test_packagekit.ml  test_qdom.ml  test_run.ml  test_selections.ml  test_solver.ml  test_stores.ml  test_trust.ml  test_utils.ml  test_versions.ml
src/tests/data/: Binary.xml  Binary2.xml  Hello-bad-digest.xml  Hello-new.xml  HelloSym.tgz  Local.xml  RecipeRemove.xml  RecipeSymlink.xml  command-dep.xml  driven.xml  foo-empty.xml  ranking-cpu.xml  solves.xml  v2-alias
src/tests/data/macports/: port
src/tests/data/ports/zeroinstall-injector-0.41_2/: +CONTENTS
src/tests/data/runnable/: Runner.xml  runner
src/windows/: dune  zeroinstall_windows.ml
src/zeroinstall/: about.ml  arch.ml  arch.mli  archive.ml  compiled.ml  compiled.mli  console.ml  dbus.without.ml  default_ui.mli  distro.mli  distro_cache.ml  distro_impls.ml  downloader.ml  driver.mli  dune  element.ml  exec.ml  exec.mli  feed.ml  feed_cache.ml  feed_import.ml  feed_metadata.mli  feed_provider.mli  feed_provider_impl.ml  feed_url.mli  fetch.ml  fetch.mli  general.ml  gui.ml  gui.mli  host_python.ml  http.mli  impl.ml  impl.mli  impl_provider.ml  impl_provider.mli  json_connection.ml  json_connection.mli  launcher.ml  manifest.ml  (+19 more)
(+523 files in other folders)
