opam-version: "2.0"
synopsis: "Decentralised installation system - GTK UI"
maintainer: "talex5@gmail.com"
authors: "zero-install-devel@lists.sourceforge.net"
homepage: "https://0install.net/"
bug-reports: "https://github.com/0install/0install/issues"
dev-repo: "git+https://github.com/0install/0install.git"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test}]
]
depends: [
  "ocaml" {>= "4.05.0"}
  "0install" {= version}
  "ounit" {with-test}
  "dune" {>= "2.1"}
  "lablgtk3" {>= "3"}
  "lwt_glib"
]
description: """
Zero Install is a decentralised cross-distribution software installation system.
This package provides a GTK-based user interface for it."""
