opam-version: "2.0"
synopsis: "Decentralised installation system - GTK UI"
maintainer: "talex5@gmail.com"
license: "LGPL-2.1-or-later"
authors: "zero-install-devel@lists.sourceforge.net"
homepage: "https://0install.net/"
bug-reports: "https://github.com/0install/0install/issues"
dev-repo: "git+https://github.com/0install/0install.git"
doc: "https://0install.github.io/0install/"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test}]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "0install" {= version}
  "ounit2" {with-test}
  "dune" {>= "2.5"}
  "lablgtk3" {>= "3"}
  "lwt_glib"
]
description: """
Zero Install is a decentralised cross-distribution software installation system.
This package provides a GTK-based user interface for it."""
