opam-version: "2.0"
synopsis: "Decentralised installation system"
maintainer: "talex5@gmail.com"
license: "LGPL-2.1-or-later"
authors: "zero-install-devel@lists.sourceforge.net"
homepage: "https://0install.net/"
bug-reports: "https://github.com/0install/0install/issues"
dev-repo: "git+https://github.com/0install/0install.git"
doc: "https://0install.github.io/0install/"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test}]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "0install-solver"
  "yojson" {>= "1.7.0"}
  "xmlm"
  "ounit2" {with-test}
  "lwt"
  "lwt_react"
  "obus" {os != "macos" & os-family != "windows"}
  "ocurl" {>= "0.7.9"}
  "sha" {>= "1.9"}
  "dune" {>= "2.5"}
]
depexts: [
  ["gnupg" "unzip"] {os-family = "debian"}
  ["gnupg" "unzip"] {os-distribution = "alpine"}
  ["gnupg"] {os = "macos" & os-distribution = "homebrew"}
]
description: """
Zero Install is a decentralised cross-distribution software installation system.
Other features include full support for shared libraries (with a SAT solver for
dependency resolution), sharing between users, and integration with native platform
package managers. It supports both binary and source packages, and works on Linux,
macOS, Unix and Windows systems."""
