(library
 (name        zeroinstall)
 (modules_without_implementation feed_provider progress sigs ui)
 (libraries curl curl.lwt dynlink lwt_react support yojson
            (select dbus.ml from
             (obus.network-manager
              obus.notification    -> dbus.with.ml)
             (                     -> dbus.without.ml))))
