(rule
 (targets extra_objects.sexp)
 (enabled_if (<> %{os_type} "Win32"))
 (action (write-file %{targets} "()")))

(rule
 (targets extra_objects.sexp)
 (enabled_if (= %{os_type} "Win32"))
 (action (chdir %{workspace_root}
          (write-file %{targets} "(\"%{dep:../windows/0install.exe.o}\")"))))

(library
 (name        support)
 (libraries   lwt lwt.unix sha str xmlm yojson
 (select windows_api.ml from
   (zeroinstall_windows -> windows_api.enabled.ml)
   (                    -> windows_api.disabled.ml)))
 (foreign_stubs
   (language c)
   (names utils)))
