(rule
  (targets 0install%{ext_exe})
  (deps %{bin:0install})
  (action (copy %{deps} %{targets})))

(rule
  (targets 0install-runenv%{ext_exe})
  (deps %{bin:0install-runenv})
  (action (copy %{deps} %{targets})))

(test
  (name test)
  (package 0install-gtk)
  (deps (alias ../../install)     ; Build the GTK plugin if possible
        0install%{ext_exe} 0install-runenv%{ext_exe})
  (libraries ounit2 zeroinstall support str))
