(rule
  (targets 0install%{ext_exe})
  (deps %{bin:0install})
  (action (copy %{deps} %{targets})))

(rule
  (targets 0install-runenv%{ext_exe})
  (deps %{bin:0install-runenv})
  (action (copy %{deps} %{targets})))

(test
  (name test)
  (package 0install)
  (deps (source_tree data)
   0install%{ext_exe} 0install-runenv%{ext_exe})
  (libraries ounit2 zeroinstall zeroinstall_cli 0install-solver support lwt lwt.unix lwt_react xmlm yojson))
